# yu

./: .gitignore  README.md  cabal.project  yu.cabal
.github/workflows/: ci.yaml
app/: Main.hs
app/Yu/: Error.hs  Lexer.hs  Located.hs  Parser.hs
examples/: simple.yu
lib/: Yu.hs
lib/Yu/: Error.hs  StaticAnalysis.hs
lib/Yu/StaticAnalysis/: NameResolution.hs  Precedences.hs  TypeCheck.hs  Types.hs
lib/Yu/StaticAnalysis/NameResolution/: Internal.hs
lib/Yu/StaticAnalysis/Precedences/: Internal.hs
lib/Yu/StaticAnalysis/TypeCheck/: Internal.hs
lib/Yu/Syntax/: AST.hs  Error.hs  Lexer.hs  Located.hs  Parser.hs  Span.hs
test/Yu/StaticAnalysis/: PrecedencesSpec.hs
test/Yu/Syntax/: LexerSpec.hs  ParserSpec.hs
