cabal-version:       2.4
name:                yu
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              vzwGrey
maintainer:          vzwGrey <vzwgrey@gmail.com>
copyright:           2020 vzwGrey
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

common common-options
  default-extensions:  OverloadedStrings
                       LambdaCase

  build-depends:       base ^>= 4.13.0.0
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable yu
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       yu
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              common-options
  hs-source-dirs:      lib
  exposed-modules:     Yu
                       Yu.Error
                       Yu.Syntax.Lexer
                       Yu.Syntax.Parser
                       Yu.Syntax.Located
  build-depends:       parser-combinators
                     , hectoparsec
                     , errata
                     , pretty-simple
