cabal-version:       2.4
name:                yu
version:             0.0.0.0
synopsis:            Custom language & implementation.
description:         Implementation of a custom programming language.
license:             MIT
license-file:        LICENSE
author:              vzwGrey
maintainer:          vzwGrey <vzwgrey@gmail.com>
copyright:           2020 vzwGrey
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

source-repository head
  type:     git
  location: https://github.com/vzwGrey/yu.git

common common-options
  default-extensions:  OverloadedStrings
                       LambdaCase

  build-depends:       base >= 4.13.0.0 && < 5.0
                     , text >= 1.2.4.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable yu
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       yu
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              common-options
  hs-source-dirs:      lib
  exposed-modules:     Yu
                       Yu.Error
                       Yu.Syntax.Lexer
                       Yu.Syntax.Parser
                       Yu.Syntax.Located
                       Yu.StaticAnalysis
                       Yu.StaticAnalysis.Types
                       Yu.StaticAnalysis.Precedences
                       Yu.StaticAnalysis.Precedences.Internal
  build-depends:       parser-combinators >= 1.2.1
                     , hectoparsec >= 0.1.0.0
                     , errata >= 0.1.0.0
                     , pretty-simple >= 3.3.0.0
                     , containers >= 0.6.0.0
                     , mtl >= 0.2.0.0

test-suite yu-test
  import:              common-options
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Yu.Syntax.LexerSpec
                       Yu.Syntax.ParserSpec
                       Yu.StaticAnalysis.PrecedencesSpec
  build-depends:       yu
                     , hectoparsec >= 0.1.0.0
                     , hspec >= 2.7.4
                     , QuickCheck >= 2.14.1
                     , quickcheck-text >= 0.1.2.1
                     , mtl >= 0.2.0.0
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
